# agentic-pattern

./: .gitignore  pyproject.toml
Docs/output/: chain-of-thought.txt  learning.txt
src/agentic_patterns/: chain_of_thougt.py  learning.py
